# SENTINEL

./: BUILD_GUIDE.md  INTEGRATION_GUIDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
backend/: SF_INTEGRATION.md  data_parser.py  pyproject.toml  sensor_fusion.py  serial_operations.py  websocket_server.py
build-scripts/: build-release.ps1  build.ps1  create-python-env.ps1
data/feather_weight/: UTRGV RL BRav LR_03-23-2025_08_30_44.csv
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data_operations.rs  lib.rs  serial_operations.rs  telemetry_sim.rs  telemetry_stats.rs
src/components/: Controls.jsx  ControlsWebSocket.jsx  Graphs.jsx  Map.jsx  Orientation.jsx  Sidebar.jsx  StatusBar.jsx  WorkspaceSwitcher.jsx
src/utils/: backendManager.js  websocketClient.js
