[project]
name = "backend"
version = "0.1.0"
description = "SENTINEL Telemetry Backend with Sensor Fusion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "ahrs>=0.3.1",
    "pykalman>=0.9.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]